--- a/styles/style.css
+++ b/styles/style.css
@@ -1,145 +1,216 @@
 @font-face {
-    font-family: 'Myriad Pro Regular';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Regular'), url('../fonts/MYRIADPRO-REGULAR.woff') format('woff');
-    }
-    
+  font-family: "Myriad Pro Regular";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Regular"),
+    url("../fonts/MYRIADPRO-REGULAR.woff") format("woff");
+}
 
 @font-face {
-    font-family: 'Myriad Pro Condensed';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Condensed'), url('../fonts/MYRIADPRO-COND.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Condensed Italic';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Condensed Italic'), url('../fonts/MYRIADPRO-CONDIT.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Light';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Light'), url('../fonts/MyriadPro-Light.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Semibold';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Semibold'), url('../fonts/MYRIADPRO-SEMIBOLD.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Semibold Italic';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Semibold Italic'), url('../fonts/MYRIADPRO-SEMIBOLDIT.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Bold Condensed';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Bold Condensed'), url('../fonts/MYRIADPRO-BOLDCOND.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Bold';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Bold'), url('../fonts/MYRIADPRO-BOLD.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Bold Italic';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Bold Italic'), url('../fonts/MYRIADPRO-BOLDIT.woff') format('woff');
-    }
-    
-
-    @font-face {
-    font-family: 'Myriad Pro Bold Condensed Italic';
-    font-style: normal;
-    font-weight: normal;
-    src: local('Myriad Pro Bold Condensed Italic'), url('../fonts/MYRIADPRO-BOLDCONDIT.woff') format('woff');
-    }
-
-
-ul, li {
-	display: block;
+  font-family: "Myriad Pro Condensed";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Condensed"),
+    url("../fonts/MYRIADPRO-COND.woff") format("woff");
 }
 
-.body {
-	padding: 0;
-	margin: 0;
-	font-family: 'Lato', sans-serif;
-	width: 1600px;
+@font-face {
+  font-family: "Myriad Pro Condensed Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Condensed Italic"),
+    url("../fonts/MYRIADPRO-CONDIT.woff") format("woff");
 }
 
-.header	{
-	background: url('../images/Header.png') no-repeat center top / cover;
+@font-face {
+  font-family: "Myriad Pro Light";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Light"),
+    url("../fonts/MyriadPro-Light.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Semibold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Semibold"),
+    url("../fonts/MYRIADPRO-SEMIBOLD.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Semibold Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Semibold Italic"),
+    url("../fonts/MYRIADPRO-SEMIBOLDIT.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Bold Condensed";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Bold Condensed"),
+    url("../fonts/MYRIADPRO-BOLDCOND.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Bold";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Bold"),
+    url("../fonts/MYRIADPRO-BOLD.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Bold Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Bold Italic"),
+    url("../fonts/MYRIADPRO-BOLDIT.woff") format("woff");
+}
+
+@font-face {
+  font-family: "Myriad Pro Bold Condensed Italic";
+  font-style: normal;
+  font-weight: normal;
+  src: local("Myriad Pro Bold Condensed Italic"),
+    url("../fonts/MYRIADPRO-BOLDCONDIT.woff") format("woff");
+}
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
+/* Убираем внутренние отступы */
+ul[class],
+ol[class] {
+  padding: 0;
+}
+
+/* Убираем внешние отступы */
+body,
+h1,
+h2,
+h3,
+h4,
+p,
+ul[class],
+ol[class],
+li,
+figure,
+figcaption,
+blockquote,
+dl,
+dd {
+  margin: 0;
+}
+
+html {
+  overflow-x: hidden;
+  overflow-y: scroll;
+  margin: 0;
+  padding: 0;
+}
+
+/* Выставляем основные настройки по-умолчанию для body */
+body {
+  min-height: 100vh;
+  scroll-behavior: smooth;
+  text-rendering: optimizeSpeed;
+  line-height: 1.5;
+  padding: 0;
+  margin: 0;
+  font-family: "Lato", sans-serif;
+}
+
+/* Удаляем стандартную стилизацию для всех ul и il, у которых есть атрибут class*/
+ul[class],
+ol[class] {
+  list-style: none;
+}
+
+/* Элементы a, у которых нет класса, сбрасываем до дефолтных стилей */
+a:not([class]) {
+  text-decoration-skip-ink: auto;
+}
+
+/* Упрощаем работу с изображениями */
+img {
+  max-width: 100%;
+  display: block;
+}
+
+/* Указываем понятную периодичность в потоке данных у article*/
+article > * + * {
+  margin-top: 1em;
+}
+
+/* Наследуем шрифты для инпутов и кнопок */
+input,
+button,
+textarea,
+select {
+  font: inherit;
+}
+
+/* Удаляем все анимации и переходы для людей, которые предпочитай их не использовать */
+@media (prefers-reduced-motion: reduce) {
+  * {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
+}
+
+.header {
+  background: url("../images/Header.png") no-repeat top;
 }
 
 header a {
-	color: rgb(255, 255, 255);
+  color: rgb(255, 255, 255);
 }
 .nav {
-	padding-top: 10px;
-	padding-left: 200px;
-	padding-right: 300px;
-	display: flex;
-	align-items: center;
+  padding-top: 30px;
+  padding-left: 208px;
+  padding-right: 300px;
+  display: flex;
+  align-items: center;
 }
 
 .logo {
-	margin-right: 385px;
+  margin-right: 424px;
 }
 .menu {
-	display: flex;
+  display: flex;
 }
 .menu li {
-	margin-right: 69px;
+  margin-right: 69px;
 }
-.menu li a{
-	text-decoration: none;
-	font-size: 16px;
-	font-family: "Lato";
-
+.menu li a {
+  text-decoration: none;
+  font-size: 16px;
+  font-family: "Lato";
 }
 
 .header-text {
-	color: rgb(255, 255, 255);
-	padding-top: 306px; 
-	padding-bottom: 345px;
-	text-align: center;
-	padding-left: 15px;
-	margin-bottom: 5px;
-
+  color: rgb(255, 255, 255);
+  padding-top: 346px;
+  padding-bottom: 340px;
+  text-align: center;
+  padding-left: 80px;
 }
 
 .welcome-text {
-	text-transform: uppercase;
-	font-size: 72px;
-  	font-family: "Myriad Pro Bold";
-  	line-height: 1.2;
-  	
+  text-transform: uppercase;
+  font-size: 72px;
+  font-family: "Myriad Pro Bold";
 }
 .welcome-helper {
   font-size: 32px;
   font-family: "Georgia";
-  line-height: 1.469;
+  line-height: 45px;
   padding-top: 0;
 }
