--- a/styles/style.css
+++ b/styles/style.css
@@ -170,7 +170,9 @@ select {
 }
 
 .header {
-  background: url("../images/Header.png") no-repeat top center / cover;
+  background: url("../images/Header.png") no-repeat top center;
+  background-size: 100%;
+  background-attachment: fixed;
 }
 
 header a {
@@ -186,24 +188,40 @@ header a {
 
 .logo {
   margin-right: 430px;
+  padding-bottom: 32px;
 }
 
 .menu {
+  cursor: pointer;
   display: flex;
 }
 .menu li {
   margin-right: 69px;
 }
+
+.menu-points:hover {
+  border-bottom: 1px solid white;
+}
+
+.menu-points {
+  padding-bottom: 32px;
+}
+
 .menu li a {
   text-decoration: none;
   font-size: 16px;
   font-family: "Lato";
 }
 
+.underline-nav {
+  padding-top: -5px;
+  padding-left: 201px;
+}
+
 .header-text {
   color: rgb(255, 255, 255);
   padding-top: 346px;
-  padding-bottom: 340px;
+  padding-bottom: 335px;
   text-align: center;
   padding-left: 80px;
 }
@@ -220,8 +238,32 @@ header a {
   padding-top: 0;
 }
 
+.register {
+  background: linear-gradient(45deg, #21424a 0 50%, #2fac6c 50% 100%);
+  width: 100%;
+  height: 100%;
+  background-attachment: fixed;
+}
+
+.register-buttoms {
+  display: inline-block;
+  padding-left: 30%;
+}
+
+.register div > a
+{
+  text-decoration: none;
+  text-transform: uppercase;
+  font-size: 22px;
+  font-family: "Lato";
+  color: rgb(255, 255, 255);
+  font-weight: bold;
+}
+
 .footer {
   background: #2a2a2a;
+  background-size: 100%;
+  background-attachment: fixed;
   height: 300px;
 }
 
@@ -238,27 +280,25 @@ header a {
 
 .menu-footer {
   display: flex;
+  cursor: pointer;
 }
 
 .menu-footer li {
   margin-right: 45px;
 }
 
-#selected {
-  color: white;
-}
-
-footer a {
-  color: #606060;
-}
-
-.menu-footer li a {
+.footer-points {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 13px;
   font-family: "Lato";
   line-height: 1.2;
   margin-right: 45px;
+  color: #606060;
+}
+
+.footer-points:hover {
+  color: white;
 }
 
 .footer-line {
