--- a/styles/style.css
+++ b/styles/style.css
@@ -1,3 +1,19 @@
+/* montserrat-200 - latin */
+@font-face {
+  font-family: "Montserrat Ultra Light";
+  src: url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.eot");
+  src: url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.eot?#iefix")
+      format("embedded-opentype"),
+    url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.woff2")
+      format("woff2"),
+    url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.woff")
+      format("woff"),
+    url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.ttf")
+      format("truetype"),
+    url("//db.onlinewebfonts.com/t/c136aa346fbf887f692c9f21b2601c85.svg#Montserrat Ultra Light")
+      format("svg");
+}
+
 @font-face {
   font-family: "Myriad Pro Regular";
   font-style: normal;
@@ -239,25 +255,57 @@ header a {
 }
 
 .register {
-  background: linear-gradient(45deg, #21424a 0 50%, #2fac6c 50% 100%);
+  background: linear-gradient(-77deg, #21424a 0 50%, #2fac6c 50% 100%);
   width: 100%;
   height: 100%;
-  background-attachment: fixed;
+  padding-left: 470px;
 }
 
 .register-buttoms {
+  margin-top: 30px;
+  margin-bottom: 30px;
   display: inline-block;
-  padding-left: 30%;
+
+  align-items: center;
 }
 
-.register div > a
-{
+.register div > a {
   text-decoration: none;
   text-transform: uppercase;
-  font-size: 22px;
+  font-size: 20px;
   font-family: "Lato";
   color: rgb(255, 255, 255);
   font-weight: bold;
+}
+
+.register div:not(:last-child) {
+  padding-right: 515px;
+}
+
+.shop-text {
+  padding-top: 95px;
+  padding-bottom: 50px;
+  text-align: center;
+  padding-left: -10px;
+}
+
+.domain-article {
+  color: rgb(56, 55, 55);
+  font-size: 24px;
+  line-height: 1.2;
+  font-family: "Lato";
+  margin-bottom: 30px;
+}
+
+.domain-info {
+  font-size: 16px;
+  font-family: "Montserrat Ultra Light";
+  /* color: rgb(162, 162, 162); */
+  line-height: 1.2;
+}
+
+.options {
+  align-items: center;
 }
 
 .footer {
