--- a/styles/style.css
+++ b/styles/style.css
@@ -444,6 +444,41 @@ td.top::before, td.bottom::before {
   height: 18px;
 } */
 
+.functions {
+  height: 342px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center;
+}
+
+.functions-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
+
+.functions_logo {
+  margin: 15px;
+}
+
+.functions_header {
+  color: rgb(48, 48, 48);
+  font-family: Lato, sans-serif;
+  font-style: heavy;
+  font-size: 18px;
+}
+
+.functions-text {
+  color: rgb(126, 126, 126);
+  font-family: FontAwesome, sans-serif;
+  font-style: regular;
+  font-size: 16px;
+  text-align: center;
+  margin: 15px;
+}
+
 .footer {
   background-size: 100%;
   background: #2a2a2a fixed;
