feat: about us block beta cmp

--- a/styles/style.css
+++ b/styles/style.css
@@ -198,7 +198,6 @@ header a {
 .logo {
   margin-right: 430px;
   padding-bottom: 32px;
-  
 }
 
 .menu {
@@ -207,7 +206,6 @@ header a {
 }
 .menu li {
   margin-right: 69px;
-  
 }
 
 .menu-points:hover {
@@ -216,7 +214,6 @@ header a {
 
 .menu-points {
   padding-bottom: 32px;
-  
 }
 
 .menu li a {
@@ -271,7 +268,6 @@ header a {
   padding-right: 515px;
 }
 
-
 .shop-text {
   margin-top: 95px;
   margin-bottom: 40px;
@@ -310,7 +306,6 @@ header a {
   border-right: 1px solid rgb(203, 203, 203);
   color: rgb(203, 203, 203);
   line-height: 1.2;
-
 }
 
 .center-domain {
@@ -331,7 +326,6 @@ header a {
   background: none;
   color: rgb(203, 203, 203);
   line-height: 1.2;
-
 }
 
 .domain-table {
@@ -347,16 +341,14 @@ header a {
   flex-direction: column;
 }
 
-.domain-content li ul{
+.domain-content li ul {
   display: flex;
   flex-direction: row;
-  
 }
 
 li {
   list-style-type: none; /* Убираем маркеры */
 }
-
 
 .domain-content-top {
   margin-top: 15px;
@@ -378,7 +370,6 @@ li {
   border-right: 1px solid rgb(203, 203, 203);
 }
 
-
 .domain-content-top ul li a,
 .domain-content-bottom ul li a {
   display: inline-block;
@@ -391,7 +382,7 @@ li {
 
 .domain-content-top ul li::after {
   display: flex;
-  content: '';
+  content: "";
   height: 8.5px;
   border-bottom: 1px solid rgb(203, 203, 203);
   width: 200px;
@@ -400,10 +391,9 @@ li {
 
 .domain-content-bottom ul li::before {
   display: flex;
-  content: '';
+  content: "";
   width: 200px;
   margin: 0 5px 0 5px;
-    
 }
 
 .slider {
@@ -427,14 +417,14 @@ label.quot {
   margin-bottom: 20px;
 }
 .author-quote {
-  display:block;
+  display: block;
   font-weight: bold;
   align-items: center;
 }
 
 .author-quote::after {
   display: inline-block;
-  content: '';
+  content: "";
   height: 12px;
   width: 20px;
   margin-right: 10px;
@@ -463,6 +453,59 @@ span.author-quote {
 input[type="radio"]:checked {
   background: rgba(255, 255, 255, 1);
   transition: background 0.5s ease;
+}
+
+.about-developers {
+  margin-left: 200px;
+  display: inline-flex;
+  margin-bottom: 105px;
+  padding-top: 105px; 
+  border-top: 1px dotted rgb(126, 126, 126);
+}
+
+.about-us {
+  color: #747474;
+  font-family: "Lato";
+  font-weight: 100;
+  margin-right: 100px;
+}
+
+.about-headline {
+  font-family: "Lato";
+  font-weight: 400;
+  font-size: 35px;
+  color: black;
+}
+
+.authors-block {
+  display: inline-flex;
+  text-align: center;
+  padding-left: 100px;
+  border-left: 1px dotted rgb(126, 126, 126);
+}
+
+.author-block div {
+  color: #bfbfbf;
+}
+
+.authors-block div:not(:last-child) {
+  padding-right: 125px;
+}
+
+.author-block div i {
+  margin-top: 15px;
+}
+
+.author-block div i:not(:last-child) {
+  margin-right: 25px;
+}
+
+.author-block div i:hover {
+  color: #1f89ba;
+}
+
+.designer-prof {
+  color: #8e8e8e;
 }
 
 .functions {
@@ -505,7 +548,6 @@ input[type="radio"]:checked {
   background: #2a2a2a fixed;
   height: 300px;
 }
-
 
 .footer-nav {
   padding-top: 23px;
@@ -576,15 +618,12 @@ input[type="radio"]:checked {
 }
 
 .copyrights-menu ul li:hover:before {
-
   content: "> \00a0 \00a0";
 }
 
 .copyrights-menu ul li:not(:hover):before {
   content: ">\00a0";
 }
-
-
 
 .copyrights-menu ul:not(:last-child) {
   margin-right: 75px;
@@ -593,5 +632,3 @@ input[type="radio"]:checked {
 .copyrights-menu ul li:not(:last-child) {
   margin-bottom: 5px;
 }
-
-
