--- a/styles/style.css
+++ b/styles/style.css
@@ -232,17 +232,14 @@ header a {
 
 .register {
   background: linear-gradient(-77deg, #2fac6c 0 50%, #21424a 50% 100%);
-  height: 118px;
-  padding-left: 470px;
-}
-
-.register-buttoms {
-  padding-top: 43px;
-  display: inline-block;
+  height: 121px;
+  display: flex;
   align-items: center;
+  flex-direction: row;
+  justify-content: space-around;
 }
 
-.register div > a {
+.register a {
   text-decoration: none;
   text-transform: uppercase;
   font-size: 20px;
@@ -251,8 +248,21 @@ header a {
   font-weight: bold;
 }
 
-.register div:not(:last-child) {
-  padding-right: 515px;
+.login-buttom{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 800px;
+  height: 121px;
+  padding-left: 200px;
+}
+.reg-buttom {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 800px;
+  height: 121px;
+  padding-right: 200px;
 }
 
 /* Domain Search Part */
