--- a/styles/style.css
+++ b/styles/style.css
@@ -403,14 +403,15 @@ li {
   background-size: 100%;
   background-repeat: no-repeat;
   background-position: top;
+  display: flex;
+  align-items: center;
 }
 
 .package-list {
-  padding-top: 100px;
   display: flex;
   align-items: center;
   justify-content: center;
-  column-gap: 4%;
+  column-gap: 6%;
   margin: auto;
 }
 
@@ -418,7 +419,7 @@ li {
   background-color: white;
   box-shadow: inset 0 0 0 2px rgb(255, 255, 255),
     0.3em 0.3em 1em rgba(170, 169, 169, 0.3);
-  min-width: 250px;
+  min-width: 255px;
   min-height: 560px;
   font-family: Lato;
 }
